Fix two problems with the GNOME helper app code: - Bail out correctly if we failed to open a library - Open the soname of the library (i.e. foo.so.0 instead of foo.so)

Bug 221217, r=blizzard, sr=darin.